--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
 # Created by .ignore support plugin (hsz.mobi)
 
+HELP.md
 .gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### IntelliJ IDEA ###
 .idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### OAuth ###
 application-oauth.properties
+application-real-db.properties
