--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,11 @@ spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.datasource.hikari.username=sa
 
-# oauth2
-spring.profiles.include=oauth
-
 # session
 spring.session.store-type=jdbc
+
+# profile group
+spring.profiles.group.local-real=local-real, oauth
+spring.profiles.group.real=real, real-db, oauth
+spring.profiles.group.real1=real1, real-db, oauth
+spring.profiles.group.real2=real2, real-db, oauth
