--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.datasource.hikari.username=sa
 # session
 spring.session.store-type=jdbc
 
+# oauth2
+spring.profiles.include=oauth
+
 # profile group
 spring.profiles.group.local-real=local-real, oauth
 spring.profiles.group.real=real, real-db, oauth
